--- a/Pig Dice Game/style.css
+++ b/Pig Dice Game/style.css
@@ -166,7 +166,7 @@ main {
   color: #c7365f;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
@@ -230,7 +230,7 @@ main {
     flex-direction: column;
     width: 50rem;
     height: auto;
-    padding: 2rem;
+    padding: 10rem 2rem;
   }
 
   .player {
@@ -250,7 +250,76 @@ main {
     font-size: 2rem;
   }
 
-  .btn {
+  /* .btn {
     font-size: 1.4rem;
+  } */
+  .btn--new {
+    position: absolute;
+    left: 50%;
+    top: 25px;
+    transform: translateX(-50%);
+    color: #444;
+    background: none;
+    border: none;
+    font-family: inherit;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 400;
+    transition: all 0.2s;
+
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+
+    padding: 0.7rem 2.5rem;
+    border-radius: 50rem;
+    box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+  }
+
+  .btn--roll{position: absolute;
+    left: 50%;
+    top: 635px; ;
+    transform: translateX(-50%);
+    color: #444;
+    background: none;
+    border: none;
+    font-family: inherit;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 400;
+    transition: all 0.2s;
+
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+
+    padding: 0.7rem 2.5rem;
+    border-radius: 50rem;
+    box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);}
+
+  .btn--hold{
+    position: absolute;
+    left: 50%;
+    top: 700px; ;
+    transform: translateX(-50%);
+    color: #444;
+    background: none;
+    border: none;
+    font-family: inherit;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 400;
+    transition: all 0.2s;
+
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+
+    padding: 0.7rem 2.5rem;
+    border-radius: 50rem;
+    box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
   }
 }
